--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Zipper - Responsive HTML Template</title>
+    <title>Oshioke destiny divine</title>
 <!--
 
 Template 2084 Zipper
@@ -62,7 +62,7 @@ http://www.tooplate.com/view/2084-zipper
                 <div class="tm-hero">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1 class="text-uppercase tm-hero-title">Zipper</h1>
+                            <h1 class="text-uppercase tm-hero-title">Oshioke</h1>
                             <p class="tm-hero-subtitle">best destination to explore...</p>
                         </div>
                     </div>
